--- a/app/src/main/res/layout/activity_game_bentuk.xml
+++ b/app/src/main/res/layout/activity_game_bentuk.xml
@@ -3,131 +3,113 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@drawable/backgrounduang"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GamePizza">
+    android:background="@drawable/backgroundbentuk"
+    tools:context=".GameBentuk">
 
     <ImageView
-        android:id="@+id/keranjang"
-        android:layout_width="208dp"
-        android:layout_height="134dp"
+        android:id="@+id/home"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/btnhome"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.099" />
+
+    <ImageView
+        android:id="@+id/kotak"
+        android:layout_width="60dp"
+        android:layout_height="66dp"
         android:scaleType="centerCrop"
         android:src="@drawable/kotakuang"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.755"
+        app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.664" />
+        app:layout_constraintVertical_bias="0.57" />
 
     <ImageView
-        android:id="@+id/soal"
-        android:layout_width="42dp"
-        android:layout_height="40dp"
+        android:id="@+id/satu"
+        android:layout_width="60dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="148dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizzasoal"
+        android:src="@drawable/bentuksatu"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.614"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.316" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <ImageView
-        android:id="@+id/pizza1"
-        android:layout_width="89dp"
-        android:layout_height="86dp"
+        android:id="@+id/dua"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza1"
+        android:src="@drawable/bentukdua"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.343" />
-
-    <TextView
-        android:id="@+id/soaltext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee"
-        android:textColor="@color/black"
-        android:text="+"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
-
-    <TextView
-        android:id="@+id/TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="556dp"
-        android:fontFamily="@font/bungee"
-        android:scaleType="centerCrop"
-        android:text="TextView"
-        android:textColor="@color/black"
-        android:textSize="21sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.773" />
+        app:layout_constraintVertical_bias="0.299" />
 
     <ImageView
-        android:id="@+id/pizza3"
-        android:layout_width="90dp"
-        android:layout_height="87dp"
+        android:id="@+id/tiga"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza3"
+        android:src="@drawable/bentuktiga"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.205"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.69" />
+        app:layout_constraintVertical_bias="0.294" />
 
     <ImageView
-        android:id="@+id/pizzasoal2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/empat"
+        android:layout_width="60dp"
+        android:layout_height="66dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza3"
+        android:src="@drawable/bentukempat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.773"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.318" />
+        app:layout_constraintVertical_bias="0.301" />
 
     <ImageView
-        android:id="@+id/pizza2"
-        android:layout_width="89dp"
-        android:layout_height="86dp"
+        android:id="@+id/lima"
+        android:layout_width="60dp"
+        android:layout_height="55dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza2"
+        android:src="@drawable/bentuklima"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.205"
+        app:layout_constraintHorizontal_bias="0.665"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.341" />
+        app:layout_constraintVertical_bias="0.292" />
 
     <ImageView
-        android:id="@+id/pizza4"
-        android:layout_width="84dp"
-        android:layout_height="89dp"
+        android:id="@+id/enam"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/pizza4"
+        android:src="@drawable/bentukenam"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.341"
+        app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.69" />
+        app:layout_constraintVertical_bias="0.299" />
 
     <ImageView
         android:id="@+id/submit"
