--- a/app/src/main/res/layout/activity_game_gelud.xml
+++ b/app/src/main/res/layout/activity_game_gelud.xml
@@ -12,11 +12,11 @@
         android:id="@+id/playerHealthBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="300dp"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:layout_marginTop="40dp"
         android:max="100"
         android:progress="100"
-        android:progressDrawable="@drawable/progress_player"
+        android:progressTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.081"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +26,12 @@
         android:id="@+id/robotHealthBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="300dp"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="48dp"
         android:max="100"
         android:progress="100"
-        android:progressDrawable="@drawable/progress_robot"
+        android:progressTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
